# jticker-aggregator

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.tests  Jenkinsfile  Makefile  README.md  docker-compose.yml  manage.py  pylama.ini  pytest.ini  requirements-dev.txt  requirements-heavy.txt  requirements.txt  run.sh  setup.cfg  setup.py
jticker_aggregator/: __init__.py  __main__.py  aggregator.py  candle.py  candle_consumer.py  candle_provider.py  checker.py  consumer.py  injector.py  kafka_topics.txt  kafka_wrapper.py  logging.py  metadata.py  prometheus_server.py  series.py  settings.py  stats.py  topic_mapping.py  trading_pair.py
tests/: conftest.py  test_aggregator.py  test_consumer.py  test_metadata.py  test_placeholder.py  test_range_collection.py  test_series.py  test_simple.py  test_stats.py  test_topic_mapping.py  utils.py
tests/mocks/test_bad_candle_format/Namespace/: now
tests/mocks/test_bad_candle_format/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_bad_trading_pair_format/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_provider_iterated_twice/Namespace/: now
tests/mocks/test_provider_iterated_twice/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_stats_propagation/Namespace/: now
tests/mocks/test_stats_propagation/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
tests/mocks/test_stuck/jticker_core.time_series_storage.influx.storage/: InfluxDBClient
(+4 files in other folders)
