[metadata]
name = jticker_aggregator
; version = file: version.txt
url = https://github.com/jibrelnetwork/jticker-aggregator
description = Jticker aggregator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = jticker_aggregator
python_requires = >= 3.7
install_requires =
    addict == 2.2.1
    giveme == 1.0.0
    aioinflux==0.5.1
    aiohttp == 3.5.4
    # python-dateutil == 2.7.5
    aiokafka == 0.5.2
    lz4tools == 1.3.1.2
    xxhash == 1.3.0
    # async-timeout == 3.0.1
    # asyncio-contextmanager == 1.0.1
    # asynctest == 0.12.2
    # python-dateutil == 2.7.5
    sentry-sdk == 0.7.10
    loguru == 0.3.2
    # click == 7.0
    backoff == 1.8.0
    mode == 4.0.1
    # pydantic == 0.32.2
    prometheus-client==0.7.1

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-asyncio
    pylama
    mypy
