[metadata]
name = jticker_aggregator
; version = file: version.txt
url = https://github.com/jibrelnetwork/jticker-aggregator
description = Jticker aggregator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = jticker_aggregator
python_requires = >= 3.7
